# lcdtap

./: .gitignore  .gitmodules  CFG_J7C.md  CFG_PICOSYSTEM.md  CFG_SOEKS01M.md  CFG_THUMBY.md  CLAUDE.md  LICENSE  README.md  launch_web_server.sh  make_release.sh  requirements.txt
.claude/: settings.json
docs/: index.html  style.css
docs/cases/arduboy/: index.html
docs/cases/espboy/: index.html
docs/cases/j7c/: index.html
docs/cases/kws-x1/: index.html
docs/cases/m5stack-cores3/: index.html
docs/cases/picopad/: index.html
docs/cases/picosystem/: index.html
docs/cases/soeks01m/: index.html
docs/cases/thumby/: index.html
docs/cases/tinyjoypad/: index.html
docs/cases/wio-terminal/: index.html
docs/monitor/: index.html
docs/stamp/v1/: widget.js
enclosure/pico2_universal/: back_panel.step  back_panel.stl  front_panel.step  front_panel.stl  lcdtap_universal.cq.py  switch.step  switch.stl  switch_set.step
example/m5tab5/: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
example/m5tab5/include/: app_config.h
example/m5tab5/include/lcdtap/m5tab5/: async_blit.hpp  display_out.hpp  i2c_selftest.hpp  i2c_slave.hpp  imu_orient.hpp  keypad.hpp  parlio_spi_slave.hpp  ppa_blit.hpp  ram_pool.hpp  spi_deser.hpp
example/m5tab5/main/: CMakeLists.txt  async_blit.cpp  display_out.cpp  idf_component.yml  imu_orient.cpp  keypad.cpp  main.cpp  nvs_config.cpp  parlio_spi_slave.cpp  ram_pool.cpp
example/m5tab5/main/include/: app_config.h
example/m5tab5/main/include/lcdtap/m5tab5/: nvs_config.hpp  parlio_spi_slave.hpp  ram_pool.hpp  spi_deser.hpp  splash.hpp
example/m5tab5/src/: display_out.cpp  i2c_selftest.cpp  i2c_slave.cpp  imu_orient.cpp  keypad.cpp  main.cpp  nvs_config.cpp  parlio_spi_slave.cpp  ppa_blit.cpp
example/m5tab5/test_host/: spi_deser_test.cpp
example/pico2/: CMakeLists.txt  README.md  build.sh
example/pico2/include/: config.h
example/pico2/src/: main.cpp  par_slave.pio  spi_slave.pio
example/pico2_3line_spi/: CMakeLists.txt  README.md
example/pico2_3line_spi/include/: config.h
example/pico2_3line_spi/src/: 3line_spi_slave.pio  main.cpp
example/pico2_common/: CMakeLists.txt
example/pico2_common/include/lcdtap/pico2/: composite_encode.hpp  composite_out.hpp  composite_sink.hpp  composite_timing.hpp  dvi_out.hpp  dvi_timing.hpp  hstx_out.hpp  i2c_slave.hpp  spi_slave.hpp
example/pico2_common/src/: composite_dac.pio  composite_encode.cpp  composite_out.cpp  composite_sink_pwm.cpp  composite_sink_r2r.cpp  composite_timing.cpp  dvi_out.cpp  dvi_timing.cpp  hstx_out.cpp  i2c_slave.cpp  spi_4line_mode0.pio  spi_slave.cpp
example/pico2_common/test_host/: composite_encode_test.cpp
example/pico2_ssd1306/: CMakeLists.txt  README.md
example/pico2_ssd1306/include/: config.h
example/pico2_ssd1306/src/: main.cpp  spi_4line_mode0.pio
example/pico2_ssd1309/: CMakeLists.txt  README.md
example/pico2_ssd1309/include/: config.h
example/pico2_ssd1309/src/: main.cpp  par_slave.pio
example/pico2_st7789/: CMakeLists.txt  README.md  build.sh
example/pico2_st7789/include/: config.h
example/pico2_st7789/src/: main.cpp  par_slave.pio  spi_slave.pio
example/pico2_universal/: CMakeLists.txt  README.md  UART_PROTOCOL.md  build.sh
example/pico2_universal/enclosure/: lcdtap_universal.cq.py  switch_set.stl
example/pico2_universal/include/: composite_dac_kind.hpp  config.h  flash_config.hpp  output_interface.hpp  uart_b64.hpp  uart_if.hpp  uart_intf.hpp  uart_lex.hpp  uart_trx.hpp  usb_msc.hpp  video_backend.hpp
example/pico2_universal/kicad/: fp-lib-table  lcdtap_rp2350.kicad_pcb  lcdtap_rp2350.kicad_pro  lcdtap_rp2350.kicad_sch
example/pico2_universal/kicad/panelize/: .gitignore  install_kikit_master.bat  panelize.bat
example/pico2_universal/src/: flash_config.cpp  main.cpp  parallel_8bit.pio  spi_3line_mode0.pio  spi_4line_mode0.pio  tusb_config.h  uart_b64.cpp  uart_if.cpp  uart_intf.cpp  uart_lex.cpp  uart_trx.cpp  usb_msc.cpp
issues/: 0000_spi_command_broken.md  0001_spi_input_change_to_parallel.md  0002_core0_throughput_optimization.md  0003_shift_register_change_to_hc595.md  0004_pixel_throughput_optimization.md  0005_ssd1306_spi_data_byte_loss.md  0006_ssd1306_charge_pump_column_offset.md  0007_cs_rise_sm_reset_race_condition.md  0008_setremap_mv_framebuf_oob.md  0009_caset_raset_mv_window_swap.md
kicad/rp2350/: lcdtap_rp2350.kicad_pcb  lcdtap_rp2350.kicad_pro  lcdtap_rp2350.kicad_sch
kicad/rp2350/panelize/: MEMO.md
lib/: CMakeLists.txt  README.md  gen_font8x16.py  library.json
lib/include/lcdtap/: config.hpp  font8x16.hpp  hot.hpp  lcdtap.hpp  osd.hpp
lib/include/lcdtap/devices/: ili9341.hpp  ssd1306.hpp  ssd1309.hpp  ssd1331.hpp  st7789.hpp
lib/include/spilcd2dvi/: spilcd2dvi.hpp
lib/include/spilcd2dvi/devices/: ssd1309.hpp  st7789.hpp
lib/src/: config.cpp  controller_base.hpp  ili9341_controller.cpp  ili9341_controller.hpp  lcdtap.cpp  osd.cpp  spi_display_base.cpp  spi_display_base.hpp  spilcd2dvi.cpp  ssd1306_controller.cpp  ssd1306_controller.hpp  ssd1309_controller.cpp  ssd1309_controller.hpp  ssd1331_controller.cpp  ssd1331_controller.hpp  st7789_controller.cpp  st7789_controller.hpp
use_cases/: ARDUBOY.md  M5STACK_CORES3.md  THUMBY.md  TINYJOYPAD.md
use_cases/arduboy/: README.md
use_cases/j7c/: README.md
use_cases/kws-x1/: README.md
use_cases/m5stack_cores3/: README.md
use_cases/picosystem/: README.md
use_cases/soeks01m/: README.md
use_cases/thumby/: README.md
use_cases/tinyjoypad/: README.md
